add_executable(YumaNavDataFactory_T YumaNavDataFactory_T.cpp)
target_link_libraries(YumaNavDataFactory_T gnsstk)
add_test(NAME YumaNavDataFactory_T COMMAND $<TARGET_FILE:YumaNavDataFactory_T>)
set_property(TEST YumaNavDataFactory_T PROPERTY LABELS NewNav)

add_executable(SEMNavDataFactory_T SEMNavDataFactory_T.cpp)
target_link_libraries(SEMNavDataFactory_T gnsstk)
add_test(NAME SEMNavDataFactory_T COMMAND $<TARGET_FILE:SEMNavDataFactory_T>)
set_property(TEST SEMNavDataFactory_T PROPERTY LABELS NewNav)

add_executable(ExtFactoryInitializer_T ExtFactoryInitializer_T.cpp)
if( ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
  SET_TARGET_PROPERTIES(ExtFactoryInitializer_T PROPERTIES LINK_FLAGS_DEBUG "/WHOLEARCHIVE:gnsstk")
  SET_TARGET_PROPERTIES(ExtFactoryInitializer_T PROPERTIES LINK_FLAGS_RELEASE "/WHOLEARCHIVE:gnsstk")
endif()
target_link_libraries(ExtFactoryInitializer_T gnsstk)
add_test(NAME ExtFactoryInitializer_T COMMAND $<TARGET_FILE:ExtFactoryInitializer_T>)
set_property(TEST ExtFactoryInitializer_T PROPERTY LABELS NewNav)
